Acrescentnado o Visually Effective Excel Dashboards

--- a/index.html
+++ b/index.html
@@ -300,6 +300,21 @@
             </div>
         </div>
 
+        <!-- Certificado 20 -->
+        <div class="certificate">
+            <div class="certificate-header" onclick="toggleCertificate(this)">
+                <i><img src="src/images/favicon-32x32.png" width="50" alt="Logo Udemy"></i>
+                <span class="certificate-title">Visually Effective Excel Dashboards</span>
+            </div>
+            <div class="certificate-content">
+                <p>Status: Aprovado</p>
+                <p>Data de Conclusão: 27/01/2025</p>
+                <div class="file-links">
+                    <a href="src/certificados/Visually Effective Excel Dashboards.pdf" target="_blank">Visualizar PDF</a>
+                </div>
+            </div>
+        </div>
+
     <script>
         function toggleCertificate(header) {
             const content = header.nextElementSibling;
